--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -10,36 +10,36 @@
 	<ui:define name="body">
 		<div class="mainDiv" align="center">
 			<h:form id="chartFormId">
-				<h2>CLBProject</h2>
-				<p:spacer height="15"/>
+				<p:spacer height="15" />
 				<table>
 					<tr>
 						<td width="8%" align="left" valign="middle">
 							<div class="checkDiv">
 								<p:selectBooleanCheckbox widgetVar="cbAL1" id="cbAL1"
 									itemLabel="AL1" label="AL1" value="#{graphicBean.aL1Check}">
-									<p:ajax process="@this" event="change" update="@form" listener="#{graphicBean.updateChartSeries1}"/>
+									<p:ajax process="@this" event="change" update="@form"
+										listener="#{graphicBean.updateChartSeries1}" />
 								</p:selectBooleanCheckbox>
 								<br />
 								<p:selectBooleanCheckbox widgetVar="cbAL2" id="cbAL2"
 									itemLabel="AL2" label="AL2" value="#{graphicBean.aL2Check}">
-									<p:ajax process="@this" event="change" update="@form" listener="#{graphicBean.updateChartSeries2}"/>
+									<p:ajax process="@this" event="change" update="@form"
+										listener="#{graphicBean.updateChartSeries2}" />
 								</p:selectBooleanCheckbox>
 								<br />
 								<p:selectBooleanCheckbox widgetVar="cbAL3" id="cbAL3"
 									itemLabel="AL3" label="AL3" value="#{graphicBean.aL3Check}">
-									<p:ajax process="@this" event="change" update="@form" listener="#{graphicBean.updateChartSeries3}"/>
+									<p:ajax process="@this" event="change" update="@form"
+										listener="#{graphicBean.updateChartSeries3}" />
 								</p:selectBooleanCheckbox>
 							</div>
 						</td>
-						<td align="center" width="92%" valign="top">
-							<p:chart id="chartId"
-								styleClass="chartCSS" type="line"
-								model="#{graphicBean.lineModel}" /> 
-								<p:poll
-								interval="3" listener="#{graphicBean.updateChartValues}"
-								update="chartFormId" />
-								<br /> </td>
+						<td align="left" width="92%" valign="top">
+								<p:chart id="chartId" widgetVar="chartId" styleClass="chartCSS" type="line"
+									model="#{graphicBean.lineModel}" />
+								<br />
+								<p:commandButton type="button" value="Reset Zoom" icon="ui-icon-cancel" onclick="PF('chartId').resetZoom()"/>
+						</td>
 					</tr>
 				</table>
 			</h:form>
