--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -42,6 +42,9 @@
 						</td>
 					</tr>
 				</table>
+				<br/>
+				<br/>
+				<p:commandButton type="submit" value="Fill Database" ajax="false" actionListener="#{graphicBean.fillDatabase}"></p:commandButton>
 			</h:form>
 		</div>
 	</ui:define>
