Organize Interface and create Radio for Scale

--- a/src/main/webapp/pages/index.xhtml
+++ b/src/main/webapp/pages/index.xhtml
@@ -10,45 +10,54 @@
 	<ui:define name="body">
 		<div class="mainDiv" align="center">
 			<h:form id="chartFormId">
-				<p:selectOneRadio id="scaleRadio" styleClass="radioScale" value="#{graphicBean.scaleSelected}">
-					<f:selectItem itemLabel="Hours" itemValue="hours" />
-					<f:selectItem itemLabel="Days" itemValue="days" />
-					<f:selectItem itemLabel="Month" itemValue="month" />
-					<f:selectItem itemLabel="Year" itemValue="year" />
-				</p:selectOneRadio>
-				<table>
+				<table class="scaleHeader">
 					<tr>
-						<td width="8%" align="left" valign="middle">
-							<div class="checkDiv">
-								<p:selectBooleanCheckbox widgetVar="cbAL1" id="cbAL1"
-									itemLabel="AL1" label="AL1" value="#{graphicBean.aL1Check}">
-									<p:ajax process="@this" event="change" update="@form"
-										listener="#{graphicBean.updateChartSeries1}" />
-								</p:selectBooleanCheckbox>
-								<br />
-								<p:selectBooleanCheckbox widgetVar="cbAL2" id="cbAL2"
-									itemLabel="AL2" label="AL2" value="#{graphicBean.aL2Check}">
-									<p:ajax process="@this" event="change" update="@form"
-										listener="#{graphicBean.updateChartSeries2}" />
-								</p:selectBooleanCheckbox>
-								<br />
-								<p:selectBooleanCheckbox widgetVar="cbAL3" id="cbAL3"
-									itemLabel="AL3" label="AL3" value="#{graphicBean.aL3Check}">
-									<p:ajax process="@this" event="change" update="@form"
-										listener="#{graphicBean.updateChartSeries3}" />
-								</p:selectBooleanCheckbox>
-							</div>
+						<td width="40%" align="middle">
+							<p:selectOneRadio
+								styleClass="radioScale" value="#{graphicBean.scaleSelected}">
+								<c:forEach items="#{graphicBean.values}" var="value">
+									<f:selectItem itemLabel="#{value.label}" itemValue="#{value}" />
+								</c:forEach>
+							</p:selectOneRadio>
 						</td>
-						<td align="left" width="92%" valign="top"><p:chart
-								id="chartId" widgetVar="chartId" styleClass="chartCSS"
-								type="line" model="#{graphicBean.lineModel}" /> <br /> <p:commandButton
-								type="button" value="Reset Zoom" icon="ui-icon-cancel"
-								onclick="PF('chartId').resetZoom()" /> <p:commandButton
-								type="submit" value="Fill Database" ajax="false"
-								actionListener="#{graphicBean.fillDatabase}"></p:commandButton>
+						<td width="15%" align="center">
+							<table class="scaleHeader">
+								<tr>
+									<td align="right" valign="top"><p:selectBooleanCheckbox widgetVar="cbAL1" id="cbAL1"
+											itemLabel="AL1" label="AL1" value="#{graphicBean.aL1Check}">
+											<p:ajax process="@this" event="change" update="@form"
+												listener="#{graphicBean.updateChartSeries1}" />
+										</p:selectBooleanCheckbox></td>
+									<td align="center" valign="top"><p:selectBooleanCheckbox widgetVar="cbAL2" id="cbAL2"
+											itemLabel="AL2" label="AL2" value="#{graphicBean.aL2Check}">
+											<p:ajax process="@this" event="change" update="@form"
+												listener="#{graphicBean.updateChartSeries2}" />
+										</p:selectBooleanCheckbox></td>
+									<td align="left" valign="top"><p:selectBooleanCheckbox widgetVar="cbAL3" id="cbAL3"
+											itemLabel="AL3" label="AL3" value="#{graphicBean.aL3Check}">
+											<p:ajax process="@this" event="change" update="@form"
+												listener="#{graphicBean.updateChartSeries3}" />
+										</p:selectBooleanCheckbox></td>
+								</tr>
+							</table>
 						</td>
+						<td width="45%" align="middle"><p:outputLabel for="fromDate"
+								value="From:"></p:outputLabel> <p:calendar widgetVar="fromDate"
+								id="fromDate"></p:calendar> <p:outputLabel for="toDate"
+								value="To:"></p:outputLabel> <p:calendar widgetVar="toDate"
+								id="toDate"></p:calendar></td>
 					</tr>
 				</table>
+				<div align="center" class="fullWidth">
+					<p:chart id="chartId" widgetVar="chartId" styleClass="chartCSS"
+						type="line" model="#{graphicBean.lineModel}" />
+					<br />
+					<p:commandButton type="button" value="Reset Zoom"
+						icon="ui-icon-cancel" onclick="PF('chartId').resetZoom()" />
+					<p:spacer width="10"/>
+					<p:commandButton type="submit" value="Fill Database" ajax="false"
+						actionListener="#{graphicBean.fillDatabase}"></p:commandButton>
+				</div>
 			</h:form>
 		</div>
 	</ui:define>
