--- a/src/main/webapp/pages/register.xhtml
+++ b/src/main/webapp/pages/register.xhtml
@@ -8,23 +8,60 @@
 	xmlns:c="http://java.sun.com/jsp/jstl/core"
 	template="template/ui.xhtml">
 	<ui:define name="body">
-		<p:dialog widgetVar="registerPanel" id="registerPanel" modal="true" header="Register New User" draggable="false" closeOnEscape="true" 
-							styleClass="registerDialog" position="center top" >	
-			<h:form>
-				<p:panelGrid columns="2" styleClass="mainTable">
+		<p:dialog widgetVar="registerPanel" id="registerPanel" modal="true"
+			header="New User" draggable="false" closeOnEscape="true"
+			styleClass="registerDialog" resizable="false">
+			<h:form id="registerForm">
+				<p:spacer height="6" />
+				<p:panelGrid columns="3" styleClass="mainTable">
 					<p:column>
-						<p:outputLabel>Username:</p:outputLabel>
+						<p:outputLabel>Name* :</p:outputLabel>
 					</p:column>
 					<p:column>
-						<p:inputText></p:inputText>
+						<p:inputText validatorMessage="Name too short!" requiredMessage="Name is required!" id="nameUser" value="#{clbHomeBean.userNameReg}" required="true" label="nameUser">
+							<f:validateLength minimum="3"></f:validateLength>
+						</p:inputText>
 					</p:column>
 					<p:column>
-						<p:outputLabel>Email:</p:outputLabel>
+						<p:message for="nameUser"/>
 					</p:column>
 					<p:column>
-						<p:inputText></p:inputText>
+						<p:outputLabel>Email* :</p:outputLabel>
+					</p:column>
+					<p:column>
+						<p:inputText requiredMessage="Email is required!" validatorMessage="Email is not valid!" required="true" label="emailUser" id="emailUser">
+							<f:validateRegex pattern="([^.@]+)(\.[^.@]+)*@([^.@]+\.)+([^.@]+)" />
+						</p:inputText>
+					</p:column>
+					<p:column>
+						<p:message for="emailUser"/>
+					</p:column>
+					<p:column>
+						<p:outputLabel>Password* :</p:outputLabel>
+					</p:column>
+					<p:column>
+						<p:inputText requiredMessage="Password is required!" label="passwordUser" id="passwordUser" required="true" type="password" validatorMessage="Al least 6 characters are needed!">
+							<f:validateLength minimum="6"></f:validateLength>
+						</p:inputText>
+					</p:column>
+					<p:column>
+						<p:message for="passwordUser"/>
+					</p:column>
+					<p:column>
+						<p:outputLabel>Address :</p:outputLabel>
+					</p:column>
+					<p:column>
+						<p:inputTextarea rows="5"></p:inputTextarea>
+					</p:column>
+					<p:column>
 					</p:column>
 				</p:panelGrid>
+				<p:spacer height="25" />
+				<div align="center">
+					<p:commandButton action="#{clbHomeBean.registerUser}" validateClient="true"
+						styleClass="signButton" value="Register" ajax="true" oncomplete="if (!args.validationFailed){ PF('registerPanel').hide() }"
+						update="@form"></p:commandButton>
+				</div>
 			</h:form>
 		</p:dialog>
 	</ui:define>
